<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/applogin">
	<LinearLayout
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="20px">	
		<LinearLayout
			android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">	
			<TextView
				android:id="@+id/lblNovoUsuario"
				android:text ="@string/lblNovoUsuario"
				android:layout_width="wrap_content" 
				android:layout_gravity="right"
				android:textStyle="bold"
				android:textColor="@color/lblNovoUsuario"
				android:typeface="sans"
				android:layout_height="wrap_content" 
				android:clickable="true"/>		
			<TextView
				android:text="@string/lblUsuario"
				android:id="@+id/lblUsuario"
				android:layout_width= "fill_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:textColor="#ffffff"/>
			<AutoCompleteTextView
				android:id="@+id/txtUsuario"
				android:textColor="#acb3b6"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:hint="@string/hintTxtUsuario"/>
			<TextView
				android:text="@string/lblSenha"
				android:id="@+id/lblSenha"
				android:layout_width= "fill_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:textColor="#ffffff"/>
			<EditText
				android:id="@+id/txtSenha"
				android:textColor="#acb3b6"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:password="true"
				android:singleLine="true"
				android:hint="@string/hintTxtSenha"/>
		</LinearLayout>
	
		<LinearLayout
			android:orientation="horizontal" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<Button
				android:id="@+id/btnSair" 
				android:text="@string/btnSair"
				android:layout_width="0px" 
				android:layout_weight="50"
				android:layout_height="wrap_content"/>		
			<Button
				android:id="@+id/btnEntrar" 
				android:text="@string/btnEntrar"
				android:layout_width="0px" 
				android:layout_weight="50"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		
		<CheckBox
			android:checked="false"
			android:id="@+id/ckbLembrarMeusDados"
			android:text="@string/ckbLembrarMeusDados"
			android:textStyle="bold"
			android:textColor="@color/lblNovoUsuario"
			android:typeface="sans"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="left"/>	
	</LinearLayout>
</ScrollView>	